# JVM-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
javap/: Cargo.toml
javap/src/: main.rs
jloader/: Cargo.toml
jloader/src/: access_flags.rs  attributes.rs  class_file.rs  constants.rs  descriptors.rs  errors.rs  lib.rs
jloader/tests/: loading.rs
src/: access_flags.rs  attributes.rs  class_file.rs  constants.rs  data_types.rs  descriptors.rs  errors.rs  lib.rs  main.rs  stack_frame.rs  vm.rs
src/instructions/: instructions.rs  mod.rs
src/ops/: mnemonics.rs  mod.rs
