[package]
name = "jvm_rs"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
authors = ["SarahGreyWolf <m.sarahgreywolf@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
opt-level="z"
strip="symbols"
lto=true

[dependencies]
byteorder = "1.4.3"
